🔒 Increase authorization: Limit 'VISITOR' access to certain APIs